# SnakeCPP

./: CMakeLists.txt  README.md
src/: body.cpp  food.cpp  main.cpp
src/headers/: body.h  food.h
